# pdf-rag-backend

./: .env.example  .gitignore  ADVANCED_MEMORY_SYSTEM.md  AGENT_MODE_MEMORY_UI.md  Dockerfile  ENHANCED_UI_FEATURES.md  HYBRID_PIPELINE_README.md  JSON_SERIALIZATION_FIXES.md  OPTIMIZED_PROMPT_ARCHITECTURE.md  PDF_RAG_Backend_Postman_Collection.json  RAILWAY_DEPLOYMENT.md  README.Docker.md  README.md  compose.yaml  main.py  pyproject.toml  railway.env.example  railway.toml  requirements.txt  test_agent_mode_ui.py  test_auth_tokens.py  test_complete_system.py  test_document_search_fix.py  test_documents_route.py  test_enhanced_pipeline.py  test_importance_scoring.py  test_json_serialization.py  test_memory_scoring.py  test_multi_document_upload.py  test_optimized_prompts.py  test_recent_documents_tool.py  test_ui_features.py  test_upload.py  test_upload_background_task.py  test_usage_tracking.py  worker.py
app/: main.py  queue.py
app/api/routes/: agent.py  (+4 more)
app/core/: auth.py  config.py  logging.py
app/db/: persistence_manager.py  sqlite_store.py  vector_store.py
app/models/: schemas.py
app/services/: agent_service.py  memory_service.py  rag_service.py  upload_jobs.py  usage_service.py
app/tools/: document_tools.py  registry.py  schemas.py  utility_tools.py
core/: __init__.py  agent.py  chunker.py  embeddings.py  evaluation.py  hybrid_search.py  keyword_search.py  memory.py  multi_document_context.py  pdf_loader.py  prompt_templates.py  rag_pipeline.py  reranker.py  tools.py  vector_store.py
persistence/: agent_memory.json  app.db  chunks.json  metadata.json
(+9 files in other folders)
