[project]
name = "07-pdf-rag-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<5",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-text-splitters>=0.3.0",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "pypdf>=6.7.5",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.41.0",
]
